--- a/Bomber3D/Assembly-CSharp.csproj
+++ b/Bomber3D/Assembly-CSharp.csproj
@@ -48,15 +48,15 @@
     <Compile Include="Assets\Scripts\Deadly.cs" />
     <Compile Include="Assets\Scripts\Direction.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
-    <Compile Include="Assets\Scripts\EnemyFollowerMovementController.cs" />
-    <Compile Include="Assets\Scripts\EnemyRandomMovementController.cs" />
+    <Compile Include="Assets\Scripts\EnemyFollower.cs" />
+    <Compile Include="Assets\Scripts\EnemyRandom.cs" />
     <Compile Include="Assets\Scripts\Explodable.cs" />
     <Compile Include="Assets\Scripts\GameStarter.cs" />
-    <Compile Include="Assets\Scripts\GameUIController.cs" />
+    <Compile Include="Assets\Scripts\GameUI.cs" />
     <Compile Include="Assets\Scripts\IExplodable.cs" />
     <Compile Include="Assets\Scripts\LevelController.cs" />
-    <Compile Include="Assets\Scripts\MenuController.cs" />
-    <Compile Include="Assets\Scripts\MovementController.cs" />
+    <Compile Include="Assets\Scripts\MenuUI.cs" />
+    <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\TilesController.cs" />
     <Compile Include="Assets\Scripts\Tile.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
